--- a/epilogue/index.html
+++ b/epilogue/index.html
@@ -7,7 +7,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt"><div class="inner">
-					<h1>Epilogue</h1>
+					<h1>GEO SYDNEY</h1>
 					<p>A free responsive site template by <a href="https://templated.co">TEMPLATED</a></p>
 				</div>
 			</header><!-- Wrapper --><div id="wrapper">
