--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 		<!-- Header -->
 			<header id="header" class="alt"><div class="inner">
-					<h1>Epilogue</h1>
-					<p>A free responsive site template by <a href="https://templated.co">TEMPLATED</a></p>
+					<h1>Great Sydney Health Care Analysis</h1>
+					<p>Created By by <a href="https://github.com/JeffWeilin">Weilin Yang</a></p>
 				</div>
 			</header><!-- Wrapper --><div id="wrapper">
 
