--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae<br>
 						malesuada turpis. Nam pellentesque in ac aliquam. Aliquam tempor<br>
 						mi porta egestas maximus lorem ipsum dolor.</p>
+						<iframe src="map.html" width="100%" height="600" style="border:none;"></iframe>
+
+
+
+						
 						<ul class="actions"><li><a href="#" class="button big">Learn More</a></li>
 						</ul></section><!-- Items --><section class="main items"><article class="item"><header><a href="#"><img src="images/pic01.jpg" alt="" width="800" height="400"></a>
 								<h3>Feugiat et faucibus</h3>
