Update index.html Intro

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
 				<!-- Banner -->
 					<section id="intro" class="main"><span class="icon fa-diamond major"></span>
-						<h2>Magna porta maximus</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae<br>
-						malesuada turpis. Nam pellentesque in ac aliquam. Aliquam tempor<br>
-						mi porta egestas maximus lorem ipsum dolor.</p>
+						<h2>Introduction</h2>
+						<p>Australia is formally defined by more than 2000 ”Statistical Area Level 2” (SA2) distinct geographical
+						regions, designed to represent communities of between 3000-25000 people ”that interact together
+						socially and economically”. In this assignment, we’ll focus on the 350+ SA2s within the Greater Sydney
+						area, and you will be tasked with spatially integrating several datasets of various formats to calculate
+						a score for how ”well-resourced” each region is.</p>
 						<iframe src="map.html" width="100%" height="600" style="border:none;"></iframe>
 
 
