--- a/index.html
+++ b/index.html
@@ -18,14 +18,11 @@
 						<p>Australia is formally defined by more than 2000 ”Statistical Area Level 2” (SA2) distinct geographical
 						regions, designed to represent communities of between 3000-25000 people ”that interact together
 						socially and economically”. In this assignment, we’ll focus on the 350+ SA2s within the Greater Sydney
-						area, and you will be tasked with spatially integrating several datasets of various formats to calculate
-						a score for how ”well-resourced” each region is.</p>
+						area.</p>
+						<h2>Interactive Map</h2>
 						<iframe src="map.html" width="100%" height="600" style="border:none;"></iframe>
-
-
-
 						
-						<ul class="actions"><li><a href="#" class="button big">Learn More</a></li>
+						<ul class="actions"><li><a href="https://www.abs.gov.au/statistics/economy/business-indicators/counts-australian-businesses-including-entries-and-exits/latest-release#data-downloads" class="button big">Data Source</a></li>
 						</ul></section><!-- Items --><section class="main items"><article class="item"><header><a href="#"><img src="images/pic01.jpg" alt="" width="800" height="400"></a>
 								<h3>Feugiat et faucibus</h3>
 							</header><p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
