--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 						<iframe src="map.html" width="100%" height="600" style="border:none;"></iframe>
 						
 						<ul class="actions"><li><a href="https://www.abs.gov.au/statistics/economy/business-indicators/counts-australian-businesses-including-entries-and-exits/latest-release#data-downloads" class="button big">Data Source</a></li>
-						</ul></section><!-- Items --><section class="main items"><article class="item"><header><a href="#"><img src="images/pic01.jpg" alt="" width="800" height="400"></a>
+						</ul></section><!-- Items --><section class="main items"><article class="item"><header><a href="#"><img src="images/Central.jpg" alt="" width="800" height="400"></a>
 								<h3>Feugiat et faucibus</h3>
 							</header><p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
 
-							</ul></article><article class="item"><header><a href="#"><img src="images/pic02.jpg" alt="" width="800" height="400"></a>
+							</ul></article><article class="item"><header><a href="#"><img src="images/West.jpg" alt="" width="800" height="400"></a>
 								<h3>Blandit adipiscing</h3>
 							</header><p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
 
-							</ul></article><article class="item"><header><a href="#"><img src="images/pic03.jpg" alt="" width="800" height="400"></a>
+							</ul></article><article class="item"><header><a href="#"><img src="images/North.jpg" alt="" width="800" height="400"></a>
 								<h3>Lorem massa nulla</h3>
 							</header><p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
 
-							</ul></article><article class="item"><header><a href="#"><img src="images/pic04.jpg" alt="" width="800" height="400"></a>
+							</ul></article><article class="item"><header><a href="#"><img src="images/South.jpg" alt="" width="800" height="400"></a>
 								<h3>Ipsum sed tempus</h3>
 							</header><p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
 
