--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<h2>Introduction</h2>
 						<p>Australia is formally defined by more than 2000 ”Statistical Area Level 2” (SA2) distinct geographical
 						regions, designed to represent communities of between 3000-25000 people ”that interact together
-						socially and economically”. In this assignment, we’ll focus on the 350+ SA2s within the Greater Sydney
+						socially and economically”. In this project, I focused on the 350+ SA2s within the Greater Sydney
 						area.</p>
 						<h2>Interactive Map</h2>
 						<iframe src="map.html" width="100%" height="600" style="border:none;"></iframe>
